# rust-book-exercises

./: .gitignore  README.md
week1/solution/benches/: p2_vec.rs
week1/solution/src/: p1_collatz.rs  p2_vec.rs
week1/starter/: Cargo.toml  README.md
week1/starter/benches/: p2_vec.rs
week1/starter/src/: lib.rs  p1_collatz.rs  p2_vec.rs
week2/solution/src/: p1_algos.rs  p2_design.rs
week2/starter/src/: lib.rs  p1_algos.rs  p2_design.rs
week3/solution/src/: lib.rs  p1_bst.rs  p2_img.rs
week3/starter/: Cargo.toml
week3/starter/benches/: p2_img_bench.rs
week3/starter/src/: p1_bst.rs  p2_img.rs
week4/solution/: Cargo.toml  run-cpp.sh
week4/solution/src/: lib.rs  p1_iter.rs  p2_tui.rs  tui.cpp
week4/starter/src/: p1_iter.rs  p2_tui.rs
week5/solution/src/: p1_context.rs  p2_memo.rs
week5/starter/: Cargo.toml
week5/starter/src/: lib.rs  p1_context.rs  p2_memo.rs
week6/solution/src/: lib.rs  p1_asyncfs.rs  p2_session.rs
week6/starter/: Cargo.toml
week6/starter/src/: p1_asyncfs.rs  p2_session.rs
