[package]
name = "week1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[dev-dependencies]
rand = "*"

[[bench]]
name = "p2_vec"
harness = false